# education-

./: .gitignore
.dependencygraph/: data.json  setting.json
bit_pool/: bit_pool.cpp
bits_pool/: bit_pool.cpp  readme.txt
enum/: enum.cpp  readme.txt
exercises/mid_studs/: fun.cpp  main.cpp  readme.txt  str_stud.h
exercises/rand_unic_sort_outMin/: main.cpp  readme.txt
exercises/sort bubble/: sort.cpp
exercises/sort_bubble/: readme.txt  sort_bubble.cpp
exercises/task_1_str/: global.h  task_1.cpp  task_1.txt
exercises/task_2_str_mass/: task_2_str_mass.cpp  var_test.h
exercises/task_2_str_mass_ptr/: task_2_str_mass.cpp
exercises/task_3/: main.cpp  readme.txt  studs.h
exercises/task_3_students/: main.cpp  studs.h
exercises/vectors/: readme.txt
ind_array/: ind_array.cpp
ind_struct/: ind_struct.cpp
ind_struct_fun/: ind_struct_fun.c  ind_struct_fun.cpp
ind_typedef/: ind_typedef.cpp
mass_strc/: mass_strc.cpp
mix_int_str_un/: mix.cpp
mix_int_str_un/2th/: global.h  mix_2.cpp
ptr_array/: ptr_array.cpp
ptr_declaring/: ptr_declaring.cpp  readme.txt
ptr_declaring_2/: just_ind.cpp  readme.txt
ptr_struct/: readme.txt
struct_array/: readme.txt
syntax/OOP/TAKSOPARK/: CMakeLists.txt  class_Car.h  class_Driver.h  class_Engine.h  class_Fleet.h  class_IFleetManagment.h  funks.cpp  funks.h  main  main.cpp  readme.txt
syntax/bits_pool/: bit_pool.cpp  readme.txt  structs_unions.h
syntax/dynam_array/: dynam_array.sln
syntax/for_gdb/: CMakeLists.txt  fun_1.cpp  fun_1.h  main.cpp
syntax/include_guards/: fun_1.cpp  fun_1.h  (+3 more)
union/: union.cpp
(+99 files in other folders)
